import java.io.IOException;
import java.util.ArrayList;

public class Main {
    public static void main(String[] args) throws IOException {
        //Team team1 = new Team("Team 1",0,0,false);
        //Team team2 = new Team("Team 2",0,0,false);

        UI ui = new UI();
        ui.start();

        IO io = new IO();

        //Match match1 = new Match(teams);
        //Match[] matches = {match1};

        //Tournament tournament = new GroupTournament("Tournament 1",teams,matches);
    }
}
