@startuml
'https://plantuml.com/class-diagram

class Main{
UI ui
IO io
}


class Team {
-String teamName
-List<String> players
-int matchTournamentScore
-int goalScore
-boolean stillInPlay
+addPlayer()
+removePlayer()
+getTeamName()
+getPlayers()
+getMatchScore()
+getGoalScore()
+String toString()
}

class Match{
-Team[] teams
-String matchName
+getTeams()
+getMatchName()
}

abstract Tournament {
-String tournamentName
-Team[] teams
-ArrayList <Matches>
+{abstract}ArrangeMatches()
+getTournamentName()
+getTeam()
+getMatches()
+String toString()
}

class KnockoutTournament{
-int winnerTeamMatchScore
-int loserTeamMatchScore
-int goalScore
+determineLoserTeamOutcome()
+ArrangeMatches()
}

class UI {
-String tournamentType
-String teamName
-int matchTournamentScore
-int goalScore
-boolean stillInPlay
-Scanner sc
-ArrayList<String> players
-String player
-Team team
IO io
Tournament tournament
int countTeams
+createPlayers()
+createTeams()
+ announce()

+createMatches()
+getMatchSchedule()
+getTeamPlacement()
+getNextMatch()
}

class IO {
{static}final String DB_URL
{static}final String USER
{static}final String PASS
+saveData()
+addTeam(String teamName)
+addPlayer(String[] playerNames, int foreignKey)
+readData()
}

UI o-- Tournament
Main o-- IO
Tournament *-- "8" Match
Tournament *-- Team
Match o-- "2" Team
Tournament <|-- KnockoutTournament
Main o-- UI
@enduml